fixed issue of cursor with editor and scrollbar

--- a/src/muya/themes/default.css
+++ b/src/muya/themes/default.css
@@ -222,46 +222,46 @@ kbd {
   }
 
   h1 {
-    font-size: 30px;
+    font-size: 2em;
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 1.8em;
   }
 
   h3 {
-    font-size: 22px;
+    font-size: 1.6em;
   }
 
   h4 {
-    font-size: 20px;
+    font-size: 1.4em;
   }
 
   h5 {
-    font-size: 18px;
+    font-size: 1.2em;
   }
 
   h6 {
-    font-size: 16px;
+    font-size: 1em;
   }
 
   h1 .ag-gray {
-    font-size: 21px;
+    font-size: 2.1em;
   }
   h2 .ag-gray {
-    font-size: 20px;
+    font-size: 1.9em;
   }
   h3 .ag-gray {
-    font-size: 19px;
+    font-size: 1.7em;
   }
   h4 .ag-gray {
-    font-size: 18px;
+    font-size: 1.5em;
   }
   h5 .ag-gray {
-    font-size: 17px;
+    font-size: 1.3em;
   }
   h6 .ag-gray {
-    font-size: 16px;
+    font-size: 1.1em;
   }
 
   p,
@@ -271,6 +271,7 @@ kbd {
   dl,
   table {
     margin: 0.5em 0;
+    cursor: text;
   }
 
   li>ol,
